force-app/main/default/objects/Phone_Number__c/Phone_Number__c.object-meta.xml
<CustomObject>
    <label>Phone Number</label>
    <nameField>
        <displayFormat>Phone - {0000}</displayFormat>
        <label>Phone Number Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phone Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>