force-app/main/default/objects/Phone_Number__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Phone Numbers</relationshipLabel>
    <relationshipName>Phone_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>