force-app/main/default/objects/Phone_Number__c/fields/Is_DND__c.field-meta.xml
<CustomField>
    <fullName>Is_DND__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is DND</label>
    <type>Checkbox</type>
</CustomField>