force-app/main/default/objects/Phone_Number__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Phone Numbers</relationshipLabel>
    <relationshipName>Phone_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>