force-app/main/default/objects/Phone_Number__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Phone Numbers</relationshipLabel>
    <relationshipName>Phone_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>