force-app/main/default/objects/Phone_Number__c/listViews/Bengaluru_Queue_Phone_Number.listView-meta.xml
<ListView>
    <fullName>Bengaluru_Queue_Phone_Number</fullName>
    <filterScope>Queue</filterScope>
    <label>Bengaluru High Priority Queue</label>
    <queue>Bengaluru_High_Priority_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>