force-app/main/default/objects/Phone_Number__c/listViews/Delhi_Queue_Phone_Number.listView-meta.xml
<ListView>
    <fullName>Delhi_Queue_Phone_Number</fullName>
    <filterScope>Queue</filterScope>
    <label>Delhi High Priorty Queue</label>
    <queue>Delhi_High_Priorty_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>