force-app/main/default/objects/Phone_Number__c/listViews/Public_Queue_Phone_Number.listView-meta.xml
<ListView>
    <fullName>Public_Queue_Phone_Number</fullName>
    <filterScope>Queue</filterScope>
    <label>Public Queue</label>
    <queue>Public_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>